src/corelib/time/qtimezone.cpp
@@ -532,7 +532,9 @@ QTimeZone::QTimeZone(int offsetSeconds)
 
 QTimeZone::QTimeZone(const QByteArray &zoneId, int offsetSeconds, const QString &name,
                      const QString &abbreviation, QLocale::Territory territory, const QString &comment)
-    : d(isTimeZoneIdAvailable(zoneId) ? nullptr // Don't let client code hijack a real zone name.
+    : d(QUtcTimeZonePrivate().isTimeZoneIdAvailable(zoneId)
+        || global_tz->backend->isTimeZoneIdAvailable(zoneId)
+        ? nullptr // Don't let client code hijack a real zone name.
         : new QUtcTimeZonePrivate(zoneId, offsetSeconds, name, abbreviation, territory, comment))
 {
 }
@@ -1420,6 +1422,7 @@ bool QTimeZone::isTimeZoneIdAvailable(const QByteArray &ianaId)
         return false;
 #endif
     return QUtcTimeZonePrivate().isTimeZoneIdAvailable(ianaId)
+        || QUtcTimeZonePrivate::offsetFromUtcString(ianaId) != QTimeZonePrivate::invalidSeconds()
         || global_tz->backend->isTimeZoneIdAvailable(ianaId);
 }
 
